# safetrip-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-azure.yml
agents/: safetrip_langchain_workflow.py
agents/safetrip_agent/: __init__.py  cli.py  env.py  evidence_rules.py  legal_knowledge_base.py  model_provider.py  orchestrator.py  retrieval.py  schemas.py  tools.py  web_demo.py
agents/safetrip_agent/subagents/: __init__.py  completeness_agent.py  drafting_agent.py  evidence_agent.py  guidance_agent.py  intake_agent.py  orchestrator_agent.py  perception_agent.py  safety_agent.py  submission_packet_agent.py  synthesis_agent.py
docs/: CASE_WORKFLOW_REFERENCE.md  FULL_CYCLE_TEST_REPORT.md  SafeTrip_AI_Report.md  TECHNICAL_ARCHITECTURE.md  TEST_REPORT.md  THAILAND_SCAM_CASE_EVIDENCE_MATRIX.md  TOURIST_LEGAL_KNOWLEDGE_BASE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
tests/: test_detailed_behaviors.py  test_model_provider.py  test_phase3_workflow.py  test_retrieval.py
